# skipr-plugin-api

./: .gitignore  README.md  mypy.ini  plan.md  pyproject.toml  run.sh
.cursor/rules/: agents.mdc
.github/workflows/: ci.yml
deploy/: digitalocean.md
integration_tests/: README.md  bruno.json
integration_tests/environments/: local.bru
integration_tests/smoke/: folder.bru  health.bru  invalid-link.bru
integration_tests/timestamps/: folder.bru  poll-timestamps.bru  start-analysis.bru
server/: .env.example  Dockerfile  classifier.py  docker-compose.db.dev.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  org_extractor.py  requirements.txt  transcript_labelling.py  youtube_url.py
server/backend/: database.py  interval_store.py  models.py  pipeline.py
server/migrations/: env.py
server/migrations/versions/: 001_create_v2_tables.py  002_richer_videos.py
tests/server/api/: test_health.py
tests/server/backend/: test_interval_store.py
tests/server/ml/: test_classifier.py  test_get_labelled_tscript.py  test_transcript_labelling.py
