[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skipr-api"
version = "0.1.0"
description = "Skipr YouTube ad-read detection API"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.2",
    "Flask==3.1.1",
    "flask-cors==6.0.1",
    "gunicorn==23.0.0",
    "mysql-connector-python==9.4.0",
    "numpy==2.3.2",
    "onnx==1.18.0",
    "onnxruntime==1.22.1",
    "optimum==1.27.0",
    "python-dotenv==1.1.1",
    "SQLAlchemy==2.0.41",
    "torch==2.8.0",
    "transformers==4.55.2",
    "youtube-transcript-api==1.2.2",
]

[project.optional-dependencies]
dev = [
    "autopep8==2.3.2",
    "mypy==1.16.1",
    "types-Flask-Cors==6.0.3.20260616",
]

[tool.setuptools]
packages = []

[tool.autopep8]
max_line_length = 88
